Fix description formatting on smaller viewports

--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,6 @@ h4 {
 }
 h5 {
     font-size: 16px;
-    text-transform: auto;
 }
 h6 {
     font-size: 13px;
